--- a/lib/leafblower_web/templates/layout/root.html.heex
+++ b/lib/leafblower_web/templates/layout/root.html.heex
@@ -14,9 +14,7 @@
       <section class="container">
         <nav>
           <ul>
-            <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
-            <% end %>
+            <%= @current_user.name %>
           </ul>
         </nav>
         <div>Brand</div>
