--- a/lib/leafblower_web/templates/layout/root.html.heex
+++ b/lib/leafblower_web/templates/layout/root.html.heex
@@ -14,10 +14,10 @@
       <section class="container">
         <nav>
           <ul>
-            <%= @current_user.name %>
+            👋 <%= @current_user.name %>
           </ul>
         </nav>
-        <div>Brand</div>
+        <div><b>Leafblower</b></div>
       </section>
     </header>
     <%= @inner_content %>
