--- a/lib/leafblower_web/templates/layout/root.html.heex
+++ b/lib/leafblower_web/templates/layout/root.html.heex
@@ -9,7 +9,7 @@
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
-  <body>
+  <body style="height: 100%">
     <header>
       <section class="container">
         <nav>
@@ -21,6 +21,6 @@
         </div>
       </section>
     </header>
-    <%= @inner_content %>
+    <%= @inner_content %> 
   </body>
 </html>
