--- a/lib/leafblower_web/templates/layout/root.html.heex
+++ b/lib/leafblower_web/templates/layout/root.html.heex
@@ -22,5 +22,11 @@
       </section>
     </header>
     <%= @inner_content %> 
+    <footer>
+      <div class="container" style="padding-bottom: 0.5em; padding-top: 0.5em; border-top: 0.1rem solid #f4f5f6">
+        <span>See source in <a href="https://github.com/fmterrorf/leafblower">Github</a></span> | 
+        <span>Made by <a href="https://github.com/fmterrorf">@fmterrorf</a></span>
+      </div>
+    </footer>
   </body>
 </html>
