--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -145,3 +145,20 @@
       scroll-snap-align: start;
     }
 }
+
+header { 
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  font-size: 0.75em;
+}
+
+html, body { 
+  padding: 0;
+  margin: 0;
+}
