--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -593,6 +593,10 @@ header nav a {
   display: block;
 }
 
+.phx-connected { 
+  height: 100%;
+}
+
 @media (min-width: 40.0rem) {
 
   /* Small devices (landscape phones, 576px and up) */
