--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -404,7 +404,7 @@ fieldset, input, select, textarea {
 }
 
 blockquote, dl, figure, form, ol, p, pre, table, ul {
-  margin-bottom: 2.5rem
+  margin-bottom: 1em
 }
 
 table {
